# seed-server-integration

./: Makefile.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/public/: index.html
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  users.rs
shared/src/users/: fields.rs
