[package]
name = "client"
version = "0.1.0"
authors = ["masond <drmason13@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.5.1"
wasm-bindgen = "0.2.58"

shared = { path = "../shared" }
web-sys = { version = "0.3.35", features = ["HtmlFormElement", "HtmlFormControlsCollection", "HtmlCollection", "Element"] }
js-sys = "0.3.35"
